--- a/config/storage.yml
+++ b/config/storage.yml
@@ -2,3 +2,9 @@
 local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
+
+cloudinary:
+  service: Cloudinary
+  cloud_name: "dpauyyvqi"
+  api_key: "574329618148982"
+  api_secret: "5ts3vKpbcknlCse5hFb7FEWzRWU"
