--- a/config/database.yml
+++ b/config/database.yml
@@ -9,4 +9,8 @@ development:
   <<: *default
   database: rails_demo_development
 
+production:
+  <<: *default
+  database: rails_demo_production
+
 
